--- a/src/style/Chat.css
+++ b/src/style/Chat.css
@@ -2,13 +2,15 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content:space-between;
     padding: 20px;
-    max-width: 600px;
+    max-width: 350px;
     margin: auto;
     background-color: #f9f9f9;
     border: 1px solid #ddd;
     border-radius: 8px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    height: 850px;
   }
   
   .chat-input-container {
